fix: breadcrumb spacing

--- a/src/styles/plugins/_astro-breadcrumbs.scss
+++ b/src/styles/plugins/_astro-breadcrumbs.scss
@@ -1,3 +1,7 @@
 @use "astro-breadcrumbs/breadcrumbs.scss" with (
   $color-is-current: var(--chapter-theme-color)
 );
+
+.c-breadcrumbs__crumbs {
+  row-gap: 0.5rem;
+}
